# NeuroFlux

./: .gitignore  AUTOMATION.md  LICENSE  PHASE2_INTEGRATION.md  README.md  discovery_report.py  discovery_runner.py  profile_performance.py  pyproject.toml  requirements-gui.txt  smoke_test.py  validate_top3.py
adversarial_validation/: FINAL_CREDIBILITY_REPORT.md  derivation_tracer.py  derivation_traces.json  model_credibility_report.json  monte_carlo.py  monte_carlo_report.json  red_team_audit.py  sensitivity_report.json  sensitivity_test.py
aerospace_requirements/: __init__.py  db.json  requirements_report.md
discovery_results/: REPORT.md  baseline_dssr.json  baseline_ssdr.json  candidates.json  top10_architectures.json  top3_detailed.json
event_package/: radical_afpm_concept.md
evidence_acquisition/: AEROSPACE_PAIN_POINT_DISCOVERY.md  ARCHITECTURE_FRONTIER_ANALYSIS.md  ARCHITECTURE_GENESIS.md  ARCHITECTURE_SURVIVABILITY_TOURNAMENT.md  CHALLENGE_FIT_AUDIT.md  CONFIDENCE_RECOVERY_PLAN.md  CUSTOMER_DISCOVERY_DESTRUCTION_TEST.md  ECONOMIC_VALUE_DESTRUCTION_TEST.md  ELECTRICAL_LOADING_INVESTIGATION.md  ELECTROMAGNETIC_FOUNDATION_AUDIT.md  EVIDENCE_BOOK_V1.md  FINAL_SURVIVOR_TOURNAMENT.md  FOSM_DESTRUCTION_TEST.md  GEOMETRY_FORENSICS.md  INVENTIVE_DELTA_ANALYSIS.md  INVENTIVE_KERNEL_REPORT.md  MASS_BREAKDOWN_EVIDENCE.md  MECHANISM_FIRST_ARCHITECTURE_SYNTHESIS.md  MISSION_CONTINUITY_RED_TEAM.md  MISSION_CONTINUITY_REPORT.md  MISSION_RECONSTRUCTION_V2.md  MISSION_RELEVANCE_AUDIT.md  NO_WINNER_HYPOTHESIS_AUDIT.md  OPTIMIZED_VALIDATION_STRATEGY.md  PATENT_EXAMINER_SIMULATION.md  PATENT_WHITESPACE_RECONSTRUCTION.md  PRIOR_ART_FORENSICS_REPORT.md  (+8 more)
(+310 files in other folders)
